syntax = "proto3";
package stride.claim;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/Stride-Labs/stride/v25/x/claim/types";

// Msg defines the Msg service.
service Msg {
  rpc SetAirdropAllocations(MsgSetAirdropAllocations)
      returns (MsgSetAirdropAllocationsResponse);
  rpc ClaimFreeAmount(MsgClaimFreeAmount) returns (MsgClaimFreeAmountResponse);
  rpc CreateAirdrop(MsgCreateAirdrop) returns (MsgCreateAirdropResponse);
  rpc DeleteAirdrop(MsgDeleteAirdrop) returns (MsgDeleteAirdropResponse);
}

message MsgSetAirdropAllocations {
  string allocator = 1;
  string airdrop_identifier = 2
      [ (gogoproto.moretags) = "yaml:\"airdrop_identifier\"" ];
  repeated string users = 3;
  repeated string weights = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"weights\""
  ];
}

message MsgSetAirdropAllocationsResponse {}

message MsgClaimFreeAmount { string user = 1; }

message MsgClaimFreeAmountResponse {
  repeated cosmos.base.v1beta1.Coin claimed_amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message MsgCreateAirdrop {
  string distributor = 1;
  string identifier = 2;
  string chain_id = 6;
  string denom = 5;
  uint64 start_time = 3;
  uint64 duration = 4;
  bool autopilot_enabled = 7;
}

message MsgCreateAirdropResponse {}

message MsgDeleteAirdrop {
  string distributor = 1;
  string identifier = 2;
}

message MsgDeleteAirdropResponse {}
